Alignment and spacing issues.

--- a/brothaus-react/src/style/App.css
+++ b/brothaus-react/src/style/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Fredoka One', cursive;
+  background: gray;
 }
 
 #app {
