--- a/brothaus-react/src/style/Heading.css
+++ b/brothaus-react/src/style/Heading.css
@@ -2,6 +2,7 @@
     margin: auto;
     filter: drop-shadow(15px 6px 15px #4444dd);
     width: 80%;
+
 }
 
 .navigation {
@@ -11,5 +12,11 @@
 }
 
 .nav-item {
+    padding: 15px;
+}
+
+.page-title {
+    margin: 15px;
+    border: 15px;
     padding: 15px;
 }
